--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,10 +1,5 @@
 pipeline {
-    agent {
-        any
-    }
-    environment {
-        CI = 'true'
-    }
+    agent any
     stages {
         stage('Build') {
             steps {
