--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -12,18 +12,24 @@ pipeline {
             echo 'Testing...'
             sh 'pwd'
             sh 'ls -la'
-            sh 'snyk auth ${snyk-api-token-kk}'
+            echo 'Authorize Snyk CLI'
+            sh '/opt/jenkins/tools/snyk/snyk-linux auth ${snyk-api-token-kk}'
             echo 'start snyk code test...'
-            sh '/opt/jenkins/tools/snyk/snyk-linux code test'
+            // sh '/opt/jenkins/tools/snyk/snyk-linux code test'
             
-            echo  'start snyk test'
+            catchError(buildResult: 'SUCCESS', stageResult: 'FAILURE') {
+                            sh '/opt/jenkins/tools/snyk/snyk-linux code test --sarif-file-output=results-code.sarif'
+                        }
+            recordIssues  tool: sarif(name: 'Snyk Code', id: 'snyk-code', pattern: 'results-code.sarif')
 
-            snykSecurity(
-              snykInstallation: 'snyk@manual',
-              // snykInstallation: 'snyk@latest',
-              snykTokenId: 'snyk-api-token-kk',
-              // place other optional parameters here, for example:
-            )
+            // echo  'start snyk test'
+
+            // snykSecurity(
+            //   snykInstallation: 'snyk@manual',
+            //   // snykInstallation: 'snyk@latest',
+            //   snykTokenId: 'snyk-api-token-kk',
+            //   // place other optional parameters here, for example:
+            // )
           }
         }
         stage('Deliver') {
