--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -13,7 +13,12 @@ pipeline {
             sh 'pwd'
             sh 'ls -la'
             echo 'Authorize Snyk CLI'
-            sh '/opt/jenkins/tools/snyk/snyk-linux auth ${snyk-api-token-kk}'
+            // sh '/opt/jenkins/tools/snyk/snyk-linux auth ${snyk-api-token-kk}'
+              withCredentials([string(credentialsId: 'snyk-api-token-kk', variable: 'SNYK_TOKEN')]) {
+                    sh 'snyk auth ${SNYK_TOKEN}'
+                }
+
+
             echo 'start snyk code test...'
             // sh '/opt/jenkins/tools/snyk/snyk-linux code test'
             
