--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -13,6 +13,8 @@ pipeline {
             sh 'pwd'
             sh 'ls -la'
             echo 'Authorize Snyk CLI'
+            sh 'echo NYK_TOKEN is  ${SNYK_TOKEN}'
+            sh 'echo snyk-api-token-kk is ${snyk-api-token-kk}'
             // sh '/opt/jenkins/tools/snyk/snyk-linux auth ${snyk-api-token-kk}'
               withCredentials([string(credentialsId: 'SNYK_TOKEN', variable: 'SNYK_TOKEN')]) {
                     sh 'snyk auth ${SNYK_TOKEN}'
