--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,47 +1,60 @@
+// Jenkinsfile solution based on the pipeline plugin:
+// https://www.jenkins.io/solutions/pipeline/
+
+// Results are output in SARIF format & processed using the Warnings NG plugin:
+// https://plugins.jenkins.io/warnings-ng/
+
+// Please read the contents of this file carefully & ensure the URLs, tokens etc match your organisations needs.
+
 pipeline {
     agent any
-    tools {nodejs "nodejs-20.2.0"}
+
+    tools {
+        nodejs 'nodejs-20.2.0'
+    }
     stages {
-        stage('Build') {
+        stage('Git Clone') {
             steps {
-                sh 'npm install'
+                git url: 'https://github.com/billytronics/goof.git', branch: 'main' 
             }
         }
-        stage('Test') {
-          steps {
-            echo 'Testing...'
-            sh 'pwd'
-            sh 'ls -la'
-            echo 'Authorize Snyk CLI'
-
-            withCredentials([string(credentialsId: 'SNYK_TOKEN_SECRET', variable: 'SNYK_TOKEN_SECRET')]) {
-              sh 'snyk auth ${SNYK_TOKEN_SECRET}'
+        
+        // Install the Snyk CLI with npm. For more information, check:
+        // https://docs.snyk.io/snyk-cli/install-the-snyk-cli
+        stage('Install snyk CLI') {
+            steps {
+                script {
+                    sh 'npm install -g snyk'
+                }
             }
+        }
+        
+        // Authorize the Snyk CLI
+        stage('Authorize Snyk CLI') {
+            steps {
+                withCredentials([string(credentialsId: 'SNYK_TOKEN_SECRET', variable: 'SNYK_TOKEN_SECRET')]) {
+                    sh 'snyk auth ${SNYK_TOKEN_SECRET}'
+                }
+            }
+        }
 
-
-            echo 'start snyk code test...'
-            // sh '/opt/jenkins/tools/snyk/snyk-linux code test'
-            
-            catchError(buildResult: 'SUCCESS', stageResult: 'FAILURE') {
-                            sh '/opt/jenkins/tools/snyk/snyk-linux code test --sarif-file-output=results-code.sarif'
+        stage('Build App') {
+            steps {
+                // Replace this with your build instructions, as necessary.
+                sh 'echo no-op'
+            }
+        }
+        
+        stage('Snyk') {
+            parallel {
+                stage('Snyk Code') {
+                    steps {
+                        catchError(buildResult: 'SUCCESS', stageResult: 'FAILURE') {
+                            sh 'snyk code test --sarif-file-output=results-code.sarif'
                         }
-            recordIssues  tool: sarif(name: 'Snyk Code', id: 'snyk-code', pattern: 'results-code.sarif')
-
-            // echo  'start snyk test'
-
-            // snykSecurity(
-            //   snykInstallation: 'snyk@manual',
-            //   // snykInstallation: 'snyk@latest',
-            //   snykTokenId: 'snyk-api-token-kk',
-            //   // place other optional parameters here, for example:
-            // )
-          }
-        }
-        stage('Deliver') {
-            steps {
-                sh './jenkins/scripts/deliver.sh'
-                input message: 'Finished using the web site? (Click "Proceed" to continue)'
-                sh './jenkins/scripts/kill.sh'
+                        recordIssues  tool: sarif(name: 'Snyk Code', id: 'snyk-code', pattern: 'results-code.sarif')
+                    }
+                }
             }
         }
     }
