--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
             steps {
             echo  'start snyk test...'
             snykSecurity(
-              snykInstallation: 'snyk@latest...',
+              snykInstallation: 'snyk@manual',
               // snykInstallation: 'snyk@latest',
               snykTokenId: 'snyk-api-token-kk',
               // place other optional parameters here, for example:
